2007-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_boxfill):  Update current color before drawing.
	Bug #1837187

2007-11-22  Morten MacFly  <mortenmacfly@users.sourceforge.net>

	* config/config.nt: #define vsnprintf

2007-11-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm: Never return a zero size estimate for a 
	non-empty string. Promote fraction characters to 1.

2007-11-21  Allin Cottrell <cottrell@wfu.edu>

	* term/emf.trm (EMF_filled_polygon): Do not alter original color
	when processing filled areas with opacity < 1.0

2007-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options PS_RememberFont ENHPS_OPEN)
	src/term.c (enhanced_recursion): Move the PostScript-specific
	RememberFont() cruft out of enhanced_recursion() and into ENHPS_OPEN.
	This both cleans up the generic enhanced recursion code and removes
	code duplication.  Filter out blatently improper font names.
	Bugs #1820912 #1833457

2007-11-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_termvar): Fix typo in
	commit dated 2007-11-04.

2007-11-20  Christos Gourdoupis  <achaios@users.sourceforge.net>

	* src/wxterminal/gp_cairo.c (gp_cairo_get_encoding):
	Allow "set encoding utf8" to override whatever the environment claims.
	Bug #1834525

2007-11-19  Ethan A Merritt  <merritt@u.washington.edu>
	* /config/buildvms.com /config/makefile.286 /config/makefile.amg
	/config/makefile.ami /config/makefile.emx /config/makefile.g  
	/config/makefile.msc /config/makefile.msw /config/makefile.mto
	/config/makefile.st /config/makefile.tc /config/makefile.unx
	/config/makefile.win /config/makefile.ztc src/gnuplot.opt:

	Add tabulate.{c|o|obj} to dependencies.  
	Pointed out by <mortenmacfly@users.sourceforge.net>

2007-11-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Do not allow the '}' character in a